--- a/README.html
+++ b/README.html
@@ -212,7 +212,7 @@ pre code {
 </div>
 <div id="help" class="section level2">
 <h2>Help</h2>
-<p>contact <span class="citation">@dh2551</span> or <span class="citation">@mingyaoemily</span> for any question</p>
+<p>contact <span class="citation">[@dh2551]</span>(<a href="https://github.com/dh2551" class="uri">https://github.com/dh2551</a>) or <span class="citation">[@mingyaoemily]</span>(<a href="https://github.com/mingyaoemily" class="uri">https://github.com/mingyaoemily</a>) for any question</p>
 </div>
 <div id="author" class="section level2">
 <h2>Author</h2>
